# behl

./: .clang-format  CMakeLists.txt  LICENSE  README.md  behl.natvis
.github/workflows/: ci.yml  pages.yml
benchmarks/: compiler_benchmarks.cpp  format_benchmarks.cpp  lexer_benchmarks.cpp  parser_benchmarks.cpp  scriptcall_benchmarks.cpp  semantic_benchmarks.cpp
cmake/: behl.pc.in  behlConfig.cmake
docs/: Gemfile  _config.yml  advanced-topics.md  callbacks.md  calling-scripts.md  differences-from-lua.md  examples.md  getting-started.md  guides.md  index.md  modules.md  optimizations.md  standard-library.md
docs/embedding/: api-reference.md  calling-functions.md  debugging.md  error-handling.md  getting-started.md  index.md  modules.md  stack-operations.md  tables.md  userdata.md
docs/language/: control-flow.md  defer.md  error-handling.md  functions.md  index.md  lexical.md  metatables.md  modules-lang.md  operators.md  tables.md  ternary.md  types.md  varargs.md  variables.md
docs/stdlib/: core.md  debug.md  fs.md  gc.md  math.md  os.md  process.md  string.md  table.md
include/behl/: behl.hpp  config.hpp  debug.hpp  exceptions.hpp  export.hpp  fs.hpp  types.hpp
src/: cli.cpp  config_internal.hpp  exceptions.cpp  memory.cpp  memory.hpp  modules.cpp  modules.hpp  platform.hpp  state.hpp  state_debug.hpp
src/api/: api_call.cpp  api_debug.cpp  api_global.cpp  api_load.cpp  api_pin.cpp  api_stack.cpp  api_state.cpp  api_table.cpp  api_types.cpp
src/ast/: ast.hpp  ast_dump.hpp  ast_holder.cpp  ast_holder.hpp  ast_transformer.hpp
src/backend/: compiler.cpp  compiler.hpp  proto.cpp  proto.hpp
src/common/: charconv_compat.hpp  format.cpp  format.hpp  hash_map.hpp  print.cpp  print.hpp  string.hpp  vector.hpp
src/frontend/: export_transform.cpp  export_transform.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  semantics_pass.cpp  semantics_pass.hpp
src/gc/: gc.cpp  gc.hpp  gc_list.hpp  gc_object.hpp  gc_state.hpp  gc_types.hpp  gc_types_fmt.hpp  gco_closure.hpp  gco_function.hpp  gco_proto.hpp  gco_string.hpp  gco_table.hpp  gco_userdata.hpp
src/libs/: lib_core.cpp  lib_debug.cpp  lib_fs.cpp  lib_gc.cpp  lib_math.cpp  lib_os.cpp  lib_process.cpp  lib_string.cpp  lib_table.cpp  libs.cpp
src/libs/process/: process_platform.hpp  process_posix.cpp  process_win32.cpp
src/lsp/: lsp_server.cpp  lsp_server.hpp  lsp_wasm.cpp  module_analyzer.cpp  module_analyzer.hpp  symbol_collector.cpp  symbol_collector.hpp
src/optimization/: optimization.hpp  optimization_pass.hpp
src/optimization/ast/: ast_context.hpp  constant_folding.cpp  constant_folding.hpp  dead_store_elimination.cpp  dead_store_elimination.hpp  loop_optimization.cpp  loop_optimization.hpp
src/vm/: bytecode.cpp  bytecode.hpp  bytecode_meta.hpp  frame.hpp  integer_ops.hpp  upvalue.hpp  value.cpp  value.hpp  vm.cpp  vm.hpp  vm_arithmetic.hpp  vm_bitwise.hpp  vm_controlflow.hpp  vm_debug.hpp  vm_detail.hpp  vm_load.hpp  vm_metatable.hpp  vm_operands.hpp  vm_table.hpp  vm_upvalues.hpp
tests/: api_tests.cpp  bitwise_tests.cpp  callstack_tests.cpp  cfunction_tests.cpp  closure_tests.cpp  compare_tests.cpp  const_tests.cpp  controflow_tests.cpp  debug_tests.cpp  defer_tests.cpp  edge_case_tests.cpp  error_tests.cpp  format_tests.cpp  function_tests.cpp  gc_list_tests.cpp  gc_stress_tests.cpp  gc_tests.cpp  hash_map_tests.cpp  integer_wrapping_tests.cpp  lexer_tests.cpp  load_tests.cpp  logical_operator_tests.cpp  loop_tests.cpp  main.cpp  metatable_tests.cpp  module_tests.cpp  multireturn_tests.cpp  numeric_literal_tests.cpp  numeric_tests.cpp  operator_precedence_tests.cpp  operator_tests.cpp  optimizations_tests.cpp  parser_tests.cpp  pcall_tests.cpp  pinning_tests.cpp  process_tests.cpp  recursion_tests.cpp  register_tests.cpp  regression_tests.cpp  scoping_tests.cpp  (+11 more)
vscode-extension/: .vscodeignore  copy-wasm.js  language-configuration.json  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts  lsp-client.ts
vscode-extension/syntaxes/: behl.tmLanguage.json
